@@ -7,6 +7,7 @@ Version 1.3.12+svn:
     * Updated translations: Chinese, Italian.
   * User interface
     * Display the race in the unit preview panel.
+    * Allow to use team labels also for 1-player-teams (bug #9747).
 
 Version 1.3.12:
   * campaigns
